[add] main app component

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
 	<title>tasks</title>
 </head>
 <body>
-	
+	<main>
+		<div class="new-item">
+			<input class="item" type="text">
+			<button class="js-add-item">ok</button>
+			<button class="js-cancel">no</button>
+		</div>
+		<ul class="tasks-list">
+			<li class="task">Grocery shopping</li>
+			<li class="task">Clean the car</li>
+			<li class="task">Confirm appointment</li>
+		</ul>
+	</main>
 </body>
 </html>
