--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>tasks</title>
+	<link href="./app.css" rel="stylesheet">
 </head>
 <body>
 	<main>
-		<div class="new-item">
-			<input class="item" type="text">
-			<button class="js-add-item">ok</button>
-			<button class="js-cancel">no</button>
+		<div class="add-task">
+			<input class="add-task-input" type="text">
+			<button class="btn js-add-task">&#10004;</button>
+			<button class="btn js-cancel-add-task">&#10008;</button>
 		</div>
 		<ul class="tasks-list">
 			<li class="task">Grocery shopping</li>
@@ -19,5 +20,6 @@
 			<li class="task">Confirm appointment</li>
 		</ul>
 	</main>
+	<script src="./app.js" type="text/javascript"></script>
 </body>
 </html>
