[add] some elements and style

--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
 </head>
 <body>
 	<main>
-		<div class="add-task">
-			<input class="add-task-input" type="text">
-			<button class="btn js-add-task">&#10004;</button>
-			<button class="btn js-cancel-add-task">&#10008;</button>
+		<h1>You Have something to do ?!</h1>
+		<div class="task-app">
+			<h3>Add a task below :</h3>
+			<div class="add-task">
+				<input class="add-task-input" type="text" placeholder="e.g.: buy bread">
+				<button class="btn js-add-task">&#10004;</button>
+				<button class="btn js-cancel-add-task">&#10008;</button>
+			</div>
+			<ul class="tasks-list">
+				<li class="task">Grocery shopping</li>
+				<li class="task">Clean the car</li>
+				<li class="task">Confirm appointment</li>
+			</ul>
 		</div>
-		<ul class="tasks-list">
-			<li class="task">Grocery shopping</li>
-			<li class="task">Clean the car</li>
-			<li class="task">Confirm appointment</li>
-		</ul>
 	</main>
 	<script src="./app.js" type="text/javascript"></script>
 </body>
